live-poll-app/poll-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll-service
  template:
    metadata:
      labels:
        app: poll-service
    spec:
      containers:
      - name: poll-service-container
        image: europe-west1-docker.pkg.dev/poker-planning-489721/poker-repo/poll-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 30
