live-poll-app/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote-service
  template:
    metadata:
      labels:
        app: vote-service
    spec:
      containers:
      - name: vote-service-container
        image: europe-west1-docker.pkg.dev/poker-planning-489721/poker-repo/vote-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 30
