live-poll-app/poker-planning-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poker-planning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poker-planning
  template:
    metadata:
      labels:
        app: poker-planning
    spec:
      containers:
      - name: poker-planning
        image: REDACTED_REGISTRY_HOST/poker-planning/poker-repo/poker-planning:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poker-planning-service
spec:
  selector:
    app: poker-planning
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
