live-poll-app/poll-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service # Le nom DNS du service à l'intérieur du cluster
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP # Accessible seulement depuis l'intérieur du cluster
  selector:
    app: poll-service # Fait le lien avec les pods qui ont le label 'app: poll-service'
  ports:
  - protocol: TCP
    port: 80 # Le port que le service expose à l'intérieur du cluster
    targetPort: 3001
