live-poll-app/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: vote-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
