live-poll-app/poll-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  tls:
  - hosts:
    - poker.vincentlam.xyz
    secretName: poker-tls
  rules:
  - host: poker.vincentlam.xyz
    http:
      paths:
      - path: /api/polls
        pathType: Prefix
        backend:
          service:
            name: poll-service
            port:
              number: 80
      - path: /api/vote
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poker-planning-service
            port:
              number: 80
